--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                             </div>
                             <div class="col-lg-8 col-md-7">
                                 <div class="slider-product-content">
-                                    <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Sofas</span> and <span>Armchairs</span></h1>
-                                    <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
-                                    <a class="main-btn" href="#" data-animation="fadeInUp" data-delay="1.5s">Explore More <i class="lni-chevron-right"></i></a>
+                                    <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Sofas</span> & <span>Armchairs</span></h1>
+                                    <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">Unwind in style with our collection of cozy sofas and elegant armchairs. <br> Designed for comfort and crafted to last.</p>
+                                    <a class="main-btn" href="#product" data-animation="fadeInUp" data-delay="1.5s">Explore More <i class="lni-chevron-right"></i></a>
                                 </div> <!-- slider product content -->
                             </div>
                         </div> <!-- row -->
@@ -136,7 +136,7 @@
                             <div class="row no-gutters align-items-center">
                                 <div class="col-lg-4 col-md-5">
                                     <div class="slider-product-image d-none d-md-block">
-                                        <img src="assets/images/slider/3.jpg" alt="Slider">
+                                        <img src="assets/images/slider/2.png" alt="Slider">
                                         <!--<div class="slider-discount-tag">
                                             <p>-20% <br> OFF</p>
                                         </div>-->
@@ -144,9 +144,9 @@
                                 </div>
                                 <div class="col-lg-8 col-md-7">
                                     <div class="slider-product-content">
-                                        <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Winter</span> Sale! is <span>Here</span></h1>
-                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
-                                        <a class="main-btn" href="#" data-animation="fadeInUp" data-delay="1.5s">Explore More <i class="lni-chevron-right"></i></a>
+                                        <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Elevate</span> Your Space <span>Today</span></h1>
+                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">Find the perfect furniture to match your vision. <br> Create a home that reflects your unique style.</p>
+                                        <a class="main-btn" href="#product" data-animation="fadeInUp" data-delay="1.5s">Explore More <i class="lni-chevron-right"></i></a>
                                     </div> <!-- slider product content -->
                                 </div>
                             </div> <!-- row -->
@@ -158,16 +158,17 @@
                             <div class="row no-gutters align-items-center">
                                 <div class="col-lg-4 col-md-5">
                                     <div class="slider-product-image d-none d-md-block">
-                                        <img src="assets/images/slider/2.jpg" alt="Slider">
-                                        <div class="slider-discount-tag">
+                                        <img src="assets/images/slider/3.jpg" alt="Slider">
+                                       <!-- <div class="slider-discount-tag">
                                             <p>FREE<br> QUOTE</p>
-                                        </div>
+                                        </div>-->
                                     </div> <!-- slider product image -->
                                 </div>
                                 <div class="col-lg-8 col-md-7">
                                     <div class="slider-product-content">
-                                        <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Get</span> a Free <span>Quote</span></h1>
-                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
+                                        <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Find</span> Your Perfect <span>Piece</span></h1>
+                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">Discover furniture that brings warmth and character to every room. <br> Transform your space with timeless designs.</p>
+
                                         <a class="main-btn" href="#contact" data-animation="fadeInUp" data-delay="1.5s">Contact Us <i class="lni-chevron-right"></i></a>
                                     </div> <!-- slider product content -->
                                 </div>
@@ -841,8 +842,8 @@
                 <div class="col-lg-6">
                     <div class="services-left mt-45">
                         <div class="services">
-                            <img src="assets/images/services/services.jpg" alt="">
-                            <a href="#" class="main-btn mt-30">Read More <i class="lni-chevron-right"></i></a>
+                            <img src="assets/images/services/services.png" alt="">
+                            <!--<a href="#" class="main-btn mt-30">Read More <i class="lni-chevron-right"></i></a>-->
                         </div> <!-- services btn -->
                     </div> <!-- services left -->
                 </div>
@@ -922,11 +923,11 @@
                     <div class="showcase-active mt-65">
                         <div class="single-showcase">
                             <img src="assets/images/showcase/t-1.jpg" alt="Testimonial">
-                            <a href="#" class="main-btn">Full Preview</a>
+                            <!--<a href="#" class="main-btn">Full Preview</a>-->
                         </div> <!-- single showcase -->
                         <div class="single-showcase">
                             <img src="assets/images/showcase/t-2.jpg" alt="Testimonial">
-                            <a href="#" class="main-btn">Full Preview</a>
+                            <!--<a href="#" class="main-btn">Full Preview</a>-->
                         </div> <!-- single showcase -->
                     </div> <!-- showcase active -->
                 </div>
@@ -1124,7 +1125,7 @@
                                             <i class="lni-phone-handset"></i>
                                         </div>
                                         <div class="info-content">
-                                            <p>+88 1234 56789</p>
+                                            <p>+233 24 473 0748</p>
                                         </div>
                                     </div> <!-- single info -->
                                 </li>
@@ -1144,7 +1145,7 @@
                                             <i class="lni-home"></i>
                                         </div>
                                         <div class="info-content">
-                                            <p>203, Envato Labs, Behind Alis Steet,Australia</p>
+                                            <p>BOX KS 830 Adum Kumasi</p>
                                         </div>
                                     </div> <!-- single info -->
                                 </li>
