--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/armchair.png" alt="WhatsApp_Logo"></a>
+                                                <img src="assets/images/product/armchair.png" alt="WhatsApp_Logo">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -277,7 +277,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/end table.png" alt="Product"></a>
+                                                <img src="assets/images/product/end table.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-20%</p>
                                                 </div>-->
@@ -299,7 +299,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/coffee table.png" alt="Product"></a>
+                                                <img src="assets/images/product/coffee table.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-10%</p>
                                                 </div>-->
@@ -321,7 +321,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/loveseat.png" alt="Product"></a>
+                                                <img src="assets/images/product/loveseat.png" alt="Product">
                                                <!-- <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -343,7 +343,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/sofa.png" alt="Product"></a>
+                                                <img src="assets/images/product/sofa.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -372,7 +372,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/bed_frames.png" alt="Product"></a>
+                                                <img src="assets/images/product/bed_frames.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -394,7 +394,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/wardrobe.png" alt="Product"></a>
+                                                <img src="assets/images/product/wardrobe.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -416,7 +416,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/dresser.png" alt="Product"></a>
+                                                <img src="assets/images/product/dresser.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -438,7 +438,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/Bed-Table.png" alt="Product"></a>
+                                               <img src="assets/images/product/Bed-Table.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -460,7 +460,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/headboard.png" alt="Product"></a>
+                                                <img src="assets/images/product/headboard.png" alt="Product">
                                                <!-- <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -489,7 +489,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/Dining_table_and_chair.png" alt="Product"></a>
+                                                <img src="assets/images/product/Dining_table_and_chair.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -511,7 +511,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/Bar-Stool.png" alt="Product"></a>
+                                                <img src="assets/images/product/Bar-Stool.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -533,7 +533,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/china-cabinet.png" alt="Product"></a>
+                                                <img src="assets/images/product/china-cabinet.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -555,7 +555,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/sideboard.png" alt="Product"></a>
+                                                <img src="assets/images/product/sideboard.png" alt="Product">
                                                <!-- <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -585,7 +585,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/patio_table.png" alt="Product"></a>
+                                                <img src="assets/images/product/patio_table.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -607,7 +607,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/Wooden-Bench.png" alt="Product"></a>
+                                                <img src="assets/images/product/Wooden-Bench.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -629,7 +629,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/outdoor_sofa.png" alt="Product"></a>
+                                                <img src="assets/images/product/outdoor_sofa.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -651,7 +651,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/RIVERA_lounge chair.png" alt="Product"></a>
+                                                <img src="assets/images/product/RIVERA_lounge chair.png" alt="Product">
                                                <!-- <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div> -->
@@ -673,7 +673,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/lounger.png" alt="Product"></a>
+                                                <img src="assets/images/product/lounger.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -702,7 +702,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/office chair.png" alt="Product"></a>
+                                                <img src="assets/images/product/office chair.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -724,7 +724,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/desk.png" alt="Product"></a>
+                                                <img src="assets/images/product/desk.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -746,7 +746,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/File-Cabinet.png" alt="Product"></a>
+                                                <img src="assets/images/product/File-Cabinet.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -768,7 +768,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/conference office table.png" alt="Product"></a>
+                                                <img src="assets/images/product/conference office table.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
@@ -790,7 +790,7 @@
                                     <div class="col-md-4">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/standing_desk.png" alt="Product"></a>
+                                                <img src="assets/images/product/standing_desk.png" alt="Product">
                                                 <!--<div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>-->
